syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.trenical.grpc";
option java_outer_classname = "TrenicalProto";

package trenical;

service TrenicalService {
  rpc GetTicketInfo (TicketRequest) returns (TicketResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc AcquistaBiglietto (BigliettoRequest) returns (BigliettoResponse);
  rpc StreamNotifiche (NotificheRequest) returns (stream Notifica);
}

// --- Ticket info ---
message TicketRequest {
  string ticket_id = 1;
}

message TicketResponse {
  string ticket_id = 1;
  string passenger_name = 2;
  string train_number = 3;
  string departure_time = 4;
  string arrival_time = 5;
}

// --- Login ---
message LoginRequest {
  string email = 1;
}

message LoginResponse {
  string userId = 1;
  string message = 2;
}

// --- Biglietto ---
message BigliettoRequest {
  string userId = 1;
  string tratta = 2;
  string data = 3;
}

message BigliettoResponse {
  string bigliettoId = 1;
  string stato = 2;
}

// --- Notifiche ---
message NotificheRequest {
  string userId = 1;
}

message Notifica {
  string messaggio = 1;
  string timestamp = 2;
}
